# dolap-sale-prediction

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  todo.md
configs/: features.yaml  model.yaml  pipeline.yaml  scraping.yaml
data/: README.md
docs/: DOLAP_SITE_MAP.md  PROJE_RAPORU.md
src/: __init__.py
src/dataset/: __init__.py
src/evaluation/: __init__.py
src/labeling/: __init__.py
src/models/: __init__.py
src/pipelines/: __init__.py  build_dataset.py  evaluate.py  label.py  scrape.py  train.py
src/preprocessing/: __init__.py
src/scraping/: __init__.py  parsers.py  scraper.py
src/utils/: __init__.py  config_snapshot.py  data_version.py  experiment.py  logger.py  metrics.py  seed.py  split.py
tests/: __init__.py
